--- a/latte-ui/build.gradle
+++ b/latte-ui/build.gradle
@@ -43,7 +43,7 @@ dependencies {
 
     //图片处理
     compile 'com.github.bumptech.glide:glide:4.0.0-RC0'
-    compile 'com.github.bumptech.glide:okhttp3-integration:4.0.0-RC0@aar'
+    compile 'com.github.bumptech.glide:okhttp3-integration:4.0.0-RC0@aar'//网络上加载优化
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
 
     //Banner依赖
