--- a/latte-core/build.gradle
+++ b/latte-core/build.gradle
@@ -82,4 +82,8 @@ dependencies {
 
     //微信依赖（包含统计）
     compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:1.3.4'
+
+    //动态权限处理
+//    compile 'com.github.hotchemi:permissionsdispatcher:2.4.0'
+//    annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.4.0'
 }
