--- a/latte-ui/build.gradle
+++ b/latte-ui/build.gradle
@@ -26,7 +26,6 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.+'
     testCompile 'junit:junit:4.12'
 
     compile project(':latte-core')
@@ -44,7 +43,7 @@ dependencies {
     //图片处理
     compile 'com.github.bumptech.glide:glide:4.0.0-RC0'
     compile 'com.github.bumptech.glide:okhttp3-integration:4.0.0-RC0@aar'//网络上加载优化
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'//代码生成器
 
     //Banner依赖
     compile 'com.bigkoo:convenientbanner:2.0.5'
