--- a/latte-core/build.gradle
+++ b/latte-core/build.gradle
@@ -73,17 +73,17 @@ dependencies {
     //LOG
     compile 'com.orhanobut:logger:2.1.1'
 
-    //Banner依赖
-    compile 'com.bigkoo:convenientbanner:2.0.5'
-    compile 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32@aar'
-
     //JSON依赖Android版
     compile 'com.alibaba:fastjson:1.1.57.android'
 
     //微信依赖（包含统计）
     compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:1.3.4'
 
-    //动态权限处理
-//    compile 'com.github.hotchemi:permissionsdispatcher:2.4.0'
-//    annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.4.0'
+    //沉浸式状态栏
+    compile 'com.github.niorgai:StatusBarCompat:2.1.3'
+
+    //Google AutoValue
+    provided 'com.google.auto.value:auto-value:1.4.1'
+    annotationProcessor "com.google.auto.value:auto-value:1.4.1"
+
 }
