--- a/latte-ui/build.gradle
+++ b/latte-ui/build.gradle
@@ -27,20 +27,24 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
+
     compile project(':latte-core')
+
     //auto
     provided 'com.google.auto.value:auto-value:1.4.1'
     annotationProcessor "com.google.auto.value:auto-value:1.4.1"
+
     //RecyclerView依赖
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.22'
+
     //RecyclerView 分割线
     compile 'com.choices.divider:RecyclerView_Divider:1.0.0'
+
     //图片处理
     compile 'com.github.bumptech.glide:glide:4.0.0-RC0'
     compile 'com.github.bumptech.glide:okhttp3-integration:4.0.0-RC0@aar'
-    //网络上加载优化
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
-    //代码生成器
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'//网络上加载优化
+
     //Banner依赖
     compile 'com.bigkoo:convenientbanner:2.0.5'
     compile 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32@aar'
