--- a/latte-core/build.gradle
+++ b/latte-core/build.gradle
@@ -3,12 +3,12 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.jakewharton.butterknife'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.0"
+    compileSdkVersion 25
+    buildToolsVersion '25.0.3'
 
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 26
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
 
@@ -28,62 +28,62 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.+'
+    //compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
-
     //Android Support包
-    compile 'com.android.support:support-v4:26.+'
-    compile 'com.android.support:design:26.+'
-    compile 'com.android.support:cardview-v7:26.+'
+    //compile 'com.android.support:support-v4:26.+'
+    compile 'com.android.support:support-v4:25.3.1'
+    //compile 'com.android.support:design:26.+'
+    compile 'com.android.support:design:25.3.1'
+    //compile 'com.android.support:cardview-v7:26.+'
+    compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     compile project(':latte-annotations')
-
     //字体图标
     compile 'com.joanzapata.iconify:android-iconify-ionicons:2.2.2'
     compile 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.2'
-
     //Fragment依赖
     compile 'me.yokeyword:fragmentation:1.0.3'
     compile 'me.yokeyword:fragmentation-swipeback:1.0.3'
-
     //ButterKnife依赖
     compile 'com.jakewharton:butterknife:8.6.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
-
     //网络请求依赖
     compile 'com.squareup.okio:okio:1.13.0'
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-scalars:2.3.0'//转化器
-
+    compile 'com.squareup.retrofit2:converter-scalars:2.3.0'
+    //转化器
     //Loader依赖
     compile 'com.wang.avi:library:2.1.3'
-
     //RxJava
     compile 'io.reactivex.rxjava2:rxjava:2.1.1'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-
     //数据库依赖
     compile 'org.greenrobot:greendao-generator:3.2.2'
     compile 'org.greenrobot:greendao:3.2.2'
-
     //LOG
     compile 'com.orhanobut:logger:2.1.1'
-
     //JSON依赖Android版
     compile 'com.alibaba:fastjson:1.1.57.android'
-
     //微信依赖（包含统计）
     compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:1.3.4'
-
     //沉浸式状态栏
     compile 'com.github.niorgai:StatusBarCompat:2.1.3'
-
     //Google AutoValue
     provided 'com.google.auto.value:auto-value:1.4.1'
     annotationProcessor "com.google.auto.value:auto-value:1.4.1"
-
+    //图片剪裁
+    compile 'com.github.yalantis:ucrop:2.2.1-native'
+    //动态权限处理
+    compile 'com.github.hotchemi:permissionsdispatcher:2.4.0'
+    annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.4.0'
+    //工具包
+    compile 'com.blankj:utilcode:1.7.1'
+    //二维码扫描
+    compile 'me.dm7.barcodescanner:zbar:1.9.3'
 }
