--- a/latte-ec/build.gradle
+++ b/latte-ec/build.gradle
@@ -3,12 +3,12 @@ apply plugin: 'com.jakewharton.butterknife'
 apply plugin: 'org.greenrobot.greendao'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.0"
+    compileSdkVersion 25
+    buildToolsVersion '25.0.3'
 
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 26
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
 
@@ -31,10 +31,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     compile project(':latte-ui')
-
     //圆形图片
     compile 'de.hdodenhof:circleimageview:2.1.0'
-
     //引入支付宝jar，这句话可以注释，是因为compile fileTree(include: ['*.jar'], dir: 'libs')这句话
     //compile files('libs/alipaySdk-20161222.jar')
 }
