--- a/latte-ui/src/main/AndroidManifest.xml
+++ b/latte-ui/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 
     package="com.example.latte_ui">
 
-    <application android:allowBackup="true" android:label="@string/app_name"
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name"
         android:supportsRtl="true">
 
     </application>
