--- a/latte-core/build.gradle
+++ b/latte-core/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     //compile 'com.android.support:design:26.+'
     compile 'com.android.support:design:25.3.1'
     //compile 'com.android.support:cardview-v7:26.+'
-    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'//一个单独的库，使用蛮广的
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
