--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,11 +39,17 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
+
     //In your app projects build.gradle file
+
     compile project(':latte-ec')
+
     annotationProcessor project(':latte-compiler')
+
     compile 'cn.jiguang.sdk:jpush:3.0.1'
     compile 'cn.jiguang.sdk:jcore:1.1.0'
+
+    //引入ShareSDKjar，这句话可以注释，是因为compile fileTree(include: ['*.jar'], dir: 'libs')这句话
 //    compile files('libs/MobCommons-2016.1222.1756.jar')
 //    compile files('libs/MobTools-2016.1222.1756.jar')
 //    compile files('libs/ShareSDK-Core-2.8.0.jar')
