--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        release {
+            keyAlias 'common'
+            keyPassword '123456'
+            storeFile file('/Users/mac/work/Android/Workspace/Github/实战/电商通用框架实战/CommonFrame_EC/key/common.jks')
+            storePassword '123456'
+        }
+    }
     compileSdkVersion 25
     buildToolsVersion '25.0.3'
     defaultConfig {
