--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,7 @@ dependencies {
     //ButterKnife依赖
     compile 'com.jakewharton:butterknife:8.6.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+
+    //数据库查看工具，也可以原生界面映射到web上
+    compile 'com.facebook.stetho:stetho:1.4.2'
 }
