--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,19 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
 
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath'com.android.tools.build:gradle:3.2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 
         //In your root build.gradle file
 
-        classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.1'
+        //classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.1'
+        classpath 'com.jakewharton:butterknife-gradle-plugin:9.0.0-rc1'
 
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
     }
@@ -34,7 +36,8 @@ allprojects {
 
         mavenCentral()//butterknife
 
-        maven { url "https://jitpack.io" } //BaseRecyclerViewAdapterHelper
+        maven { url "https://jitpack.io" }
+        google() //BaseRecyclerViewAdapterHelper
     }
 }
 
