--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
 
         //classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.1'
         classpath 'com.jakewharton:butterknife-gradle-plugin:9.0.0-rc1'
+        //classpath 'com.jakewharton:butterknife-gradle-plugin:10.1.0'
 
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
     }
