--- a/latte-core/build.gradle
+++ b/latte-core/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     //annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     api 'com.jakewharton:butterknife:9.0.0-rc1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc1'
+    //api 'com.jakewharton:butterknife:10.1.0'
+    //annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 
     //网络请求依赖
     api 'com.squareup.okio:okio:1.13.0'
